<resources>
    <string name="app_name">SASY NonTag</string>
    <string name="app_heading">SASY NonTag Setting</string>
    <string name="appbar_scrolling_view_behavior">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="confirm_pin_text">Confirm your pin</string>

    <string name="bluetooth_not_supported">This device is not supported bluetooth</string>
    <string name="permission_missing">App needs Bluetooth permission.</string>
    <string name="welcome_text">Welcome!\nLet\'s get started</string>
    <string name="welcome_text_admin">Welcome Admin\nExplore more</string>
    <string name="searching_devices">Searching for devices</string>
    <string name="searching_devices_description">Make sure your phone\'s bluetooth device is unlocked</string>
    <string name="cancel">Cancel</string>
    <string name="view_details">View details</string>
    <string name="simplepinlock_request_pin">Enter PIN</string>
    <string name="simplepinlock_enter_pin1">Enter new PIN</string>
    <string name="simplepinlock_enter_pin2">Re enter PIN</string>
    <string name="simplepinlock_invalid_pin">Invalid PIN. Try again</string>
    <string name="simplepinlock_pin_mismatch">PIN mismatch. Try again</string>
    <string name="already_paired">Paired devices</string>
    <string name="back">Back</string>
    <string name="ranges">Range</string>
    <string name="long_text">Long Range</string>
    <string name="short_text">Short Range</string>
    <string name="error">Error</string>
    <string name="information">Information</string>
    <string name="important">Important</string>
    <string name="ok">OK</string>
    <string name="enable_gps_message">Please enable location to get initiate nearby devices.</string>
    <string name="accept">Accept</string>
    <string name="no_bluetooth_support">This device does not support bluetooth</string>
    <string name="required_permissions">Required permissions</string>
    <string name="permission_missing_31">App needs Nearby devices permission to find and connect to devices via Bluetooth. You can turn it off when not in use.</string>
    <string name="turn_on_bluetooth">Turn on bluetooth</string>
    <string name="scan">Scan</string>
    <string name="available_device_title">Available</string>
    <string name="bluetooth_is_off">Bluetooth is off</string>
    <string name="please_turn_on_bluetooth">Please turn on your phones bluetooth.</string>
    <string name="scan_and_connect"><![CDATA[Scan & Connect]]></string>
    <string name="bluetooth_state_on">Bluetooth State: On</string>
    <string name="no_scan_device_found">No available device found</string>
    <string name="no_paired_device_found">No paired device found</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="r_cr_carriage_return">&#47;r- CR(Carriage Return)</string>
    <string name="please_enter_range_value">Please enter range value.</string>
    <string name="please_enter_blesig_value">Please enter blesig value.</string>
    <string name="please_enter_rid_value">Please enter 10 digit/character RID value.</string>
    <string name="rid_value_length_error">Please valid RID value.</string>
    <string name="distance_value_in_meter">Distance value in meter</string>
    <string name="get">Get</string>
    <string name="set">Set</string>
    <string name="enter_rid_here">Enter RID here</string>
    <string name="current_date_time">Current Date-Time</string>
    <string name="clear_log">Clear Log</string>
    <string name="are_you_sure_you_want_to_clear_log">Are you sure you want to clear log?</string>
    <string name="speed">Speed</string>
    <string name="please_enter_velocity">Please enter velocity value.</string>
    <string name="enter_velocity">Enter velocity</string>
    <string name="copy_firmware">Copy Firmware</string>
    <string name="are_you_sure_you_want_to_copy_firmware">Are you sure you want to copy firmware?</string>
    <string name="enter_tag_id">Enter Tag ID</string>
    <string name="add_tag">Add Tag</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="enter_tag_value">Please enter Tag value.</string>
    <string name="ble">BLE</string>
    <string name="turn_on_off_ble_device">Turn on/off BLE device</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="camera">Camera</string>

    <string name="turn_on_off_camera">Enable/Disable camera</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="sent">Sent</string>
    <string name="not_sent">Not Sent</string>
    <string name="not_connected">Not Connected</string>
    <string name="get_dev_info">Get device information</string>
    <string name="dev_info">Device info</string>
    <string name="please_select_camera_value">Please select camera type.</string>
    <string name="front">Front</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="distance_value_in_cms">Distance value in cms</string>
    <string name="default_log">Default Log</string>
    <string name="set_default_log">Set Default Log</string>
    <string name="default_value">Default</string>
    <string name="device_id">Device ID</string>
    <string name="tag_list">Tag List</string>
    <string name="get_tag_list">Get tag list</string>
    <string name="please_enter_valid_pin">Please enter valid pin.</string>
    <string name="please_enter_valid_admin_pin">Please enter valid admin pin.</string>
    <string name="admin_login">Admin Login</string>
    <string name="admin_logout_msg">This will logout admin account.Are you sure?</string>
    <string name="admin_switch_msg">Would you like to switch to user account?</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="default_parameter">Default Parameter</string>
    <string name="factory_default">Factory Default</string>
    <string name="request_rejected">Request rejected</string>
    <string name="unpair_device">Do you want to unpair this device?</string>
    <string name="rational_msg">Please accept required permissions to use SASY app</string>
</resources>