<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewToolTip"
            style="@style/BannerTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/camera"
            android:textColor="@color/app_primary_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewToolTip">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonFrontCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/front"
                app:buttonTint="@color/app_primary_color" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButtonBackCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/back"
                app:buttonTint="@color/app_primary_color" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButtonLeftCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/left"
                app:buttonTint="@color/app_primary_color" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButtonRightCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right"
                app:buttonTint="@color/app_primary_color" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewRt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center_horizontal"
            android:paddingHorizontal="8dp"
            android:text="@string/turn_on_off_camera"
            android:textColor="@color/black_overlay"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTurnOn"
            style="@style/PrimaryColoredButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="52dp"
            android:gravity="center_horizontal"
            android:text="@string/enable"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/buttonTurnOff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewRt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTurnOff"
            style="@style/PrimaryColoredButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="52dp"
            android:gravity="center_horizontal"
            android:text="@string/disable"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonTurnOn"
            app:layout_constraintTop_toBottomOf="@id/textViewRt" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dataSentStatusTextView"
        style="@style/AppTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transparent_green"
        android:elevation="12dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>